# httpfromtcp

./: .gitignore  200.html  400.html  500.html  Cargo.toml
src/: body.rs  channel.rs  connection.rs  decoder.rs  encoder.rs  error.rs  headers.rs  io.rs  lib.rs  listener.rs  main.rs  parser.rs  pool.rs  request.rs  request_line.rs  response.rs  server.rs
src/parts/: body.rs  headers.rs  method.rs  mod.rs  request_line.rs  status.rs  version.rs
tmp/: tcp.txt
