[package]
name = "httpfromtcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.1"
reqwest = "0.13.2"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tokio = {version = "1.49.0", features = ["macros", "rt", "net", "signal", 'sync', 'time', 'io-util', 'rt-multi-thread']}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
